--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: djangae-scaffold
+application: bugmanduty
 version: 1
 runtime: python27
 api_version: 1
@@ -14,6 +14,10 @@ handlers:
 - url: /static/admin/
   static_dir: sitepackages/django/contrib/admin/static/admin/
   secure: always
+
+- url: /static
+  static_dir: static
+  expiration: '1m'
 
 # Set Django admin to be login:admin as well as Django's is_staff restriction
 - url: /admin.*
