--- a/index.yaml
+++ b/index.yaml
@@ -48,3 +48,8 @@ indexes:
   properties:
   - name: app
   - name: name
+
+- kind: core_lotteryresult
+  properties:
+  - name: project_id
+  - name: created
